--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -146,7 +146,7 @@
 <img class="mb-3" id="qrcode" />
 <div class="mono deposit-address select-all">
   <span id="depositAddress"></span>
-  <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18"></span>
+  <span id="copyAddressBtn" class="copy-btn ico-copy mt-2 ml-2 fs18"></span>
   <span id="copyAlert" class="d-hide">[[[copied]]]</span>
 </div>
 <div class="my-3">
