Show relative time only for pokes

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -279,6 +279,10 @@ div.note-indicator {
   }
 }
 
+span.note-time {
+  white-space: nowrap;
+}
+
 #noteIndicator {
   position: absolute;
   top: 0;
