--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -67,11 +67,10 @@
     </div>
     <div id="pokeList" class="d-hide flex-grow-1 stylish-overflow">
       <div id="pokeTmpl" class="note fs15 p-2">
-        <div class="d-flex justify-content-center align-items-center px-1">
-          <div class="flex-grow-1 d-inline-block fs16" data-tmpl="dateTime"></div>
+        <div class="d-flex justify-content-center align-items-start px-1">
+          <div class="fs15 px-1 flex-grow-1" data-tmpl="details"></div>
           <span class="note-time"></span>
         </div>
-        <div class="fs15 px-1" data-tmpl="details"></div>
       </div>
     </div>
   </div>
