--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -25,7 +25,7 @@
 
     <div id="noBots" class="w-100 flex-center flex-column">
       <div class="d-flex align-items-stretch brdrleft brdrright">
-        <div class="col-12 d-flex flex-column align-items-stretch mw-425 p-2">
+        <div class="col-12 flex-stretch-column mw-425 p-2">
           <div class="fs28 flex-center text-nowrap brdrbottom">[[[Market Making]]]</div>
           <div class="p-2 text-justify fs15">
             [[[whats_a_market_maker]]]
@@ -102,8 +102,8 @@
     {{template "orderOptionTemplates"}}
 
     {{- /* APP PASSWORD */ -}}
-    <form id="pwForm" class="d-flex flex-column align-items-stretch">
-      <div class="form-closer"><span class="ico-cross"></span></div>
+    <form id="pwForm" class="flex-stretch-column">
+      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div>
         <label for="pwInput" class="form-label pt-3 ps-1 mb-1">[[[App Password]]]</label>
         <input type="password" class="form-control select" id="pwInput" autocomplete="off">
