--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -29,7 +29,7 @@
       </div>
       {{- /* STRATEGY SELECTION */ -}}
       <div id="gapStrategyBox" class="w-100">
-        <div class="d-flex flex-column align-items-stretch pb-2">
+        <div class="flex-stretch-column pb-2">
           <div class="text-nowrap me-2 mb-1 fs18 demi">[[[gap_strategy]]]</div>
           <select id="gapStrategySelect" class="form-select fs18">
             <option value="percent-plus">[[[gap_strategy_percent_plus]]]</option>
@@ -158,7 +158,7 @@
     </div>
 
     <div class="col-24 col-xl-10 col-xxl-12 d-flex flex-wrap">
-      <div class="col-24 col-xxl-8 d-flex flex-column align-items-stretch">
+      <div class="col-24 col-xxl-8 flex-stretch-column">
 
         <div id="cexRebalanceSettings" class="settings-card">
           <label for="cexRebalanceCheckbox" class="fs18 d-flex align-items-center justify-content-between w-100">
@@ -227,7 +227,7 @@
         </div>
       </div>
 
-      <div class="col-24 col-xxl-8 d-flex flex-column align-items-stretch">
+      <div class="col-24 col-xxl-8 flex-stretch-column">
         <div id="baseBalanceBox" class="settings-card">
           <div class="fs18 d-flex align-items-center justify-content-between">
             <div class="flex-center">
@@ -303,7 +303,7 @@
         </div>
       </div>
 
-      <div class="col-24 col-xxl-8 d-flex flex-column align-items-stretch">
+      <div class="col-24 col-xxl-8 flex-stretch-column">
         <div id="quoteBalanceBox" class="settings-card">
           <div class="fs18 mb-2 d-flex align-items-center justify-content-between">
             <div class="flex-center">
