--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -3,7 +3,7 @@
 <div id="main" data-handler="orders" class="main overflow-y-auto">
 
   <div class="w-100 d-flex justify-content-start align-items-stretch">
-    <div class="d-flex flex-column align-items-stretch justify-content-start orders-left-side">
+    <div class="flex-stretch-column justify-content-start orders-left-side">
       <div class="demi fs22 text-center py-1 px-4">[[[Order History]]]</div>
       <div class="filter-display bg1">[[[Exchanges]]]</div>
       <div id="hostFilter" class="filter-opts">
