--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -3,7 +3,7 @@
 {{$passwordIsCached := .UserInfo.PasswordIsCached}}
 {{$authed := .UserInfo.Authed}}
 <div id="main" data-handler="settings" class="text-center py-5 overflow-y-auto">
-  <div class="mw-425 d-flex flex-column align-items-stretch mx-auto">
+  <div class="mw-425 flex-stretch-column mx-auto">
     <span class="settings-gear ico-settings"></span><br>
     <div class="settings">
       <div class="form-check">
