--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -214,6 +214,12 @@ input:focus:not([type=checkbox]) {
   align-items: center;
 }
 
+.flex-stretch-column {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
 @mixin fill-abs {
   position: absolute;
   top: 0;
@@ -238,6 +244,7 @@ input:focus:not([type=checkbox]) {
   /* Works on Chrome/Edge/Safari */
   &::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
   }
 
   &::-webkit-scrollbar-track {
