client/asset/{btc,dcr}: DCR native wallet TxHistory
This diff implements TxHistory for the DCR native wallet. The BadgerTxDB
used for BTC is exported and reused in DCR.

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -289,7 +289,7 @@
                     </tr>
                   </thead>
                   <tbody id="txHistoryTableBody" class="fs17">
-                    <tr id="txHistoryRow" class="hoverbg pointer">
+                    <tr id="txHistoryRowTmpl" class="hoverbg pointer">
                       <td>
                         <span data-tmpl="time"></span>
                         <div data-tmpl="pending" class="d-hide"><span>Pending</span><div class="px-2 ico-spinner spinner fs-14 d-inline-block"></div></div>
@@ -304,7 +304,7 @@
                         <span data-tmpl="amount"></span>
                       </td>
                     </tr>
-                    <tr id="txHistoryDateRow">
+                    <tr id="txHistoryDateRowTmpl">
                       <td colspan="4" class="text-center grey">
                         <span class="fs18" data-tmpl="date"></span>
                       </td>
