--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -13,6 +13,15 @@ button {
   background-color: transparent;
   border: 1px solid #7777;
   outline: none;
+
+  &.selected {
+    background-color: #38cfb0;
+    border: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
 }
 
 body {
@@ -105,13 +114,13 @@ div.clear {
   opacity: 0; // Set by animation upon initial loading.
 }
 
-button.selected {
-  background-color: #38cfb0;
-  border: none;
-}
+div.feature,
+button.feature {
+  background-color: #6bc5ff;
 
-button:focus {
-  outline: none;
+  &:hover {
+    background-color: #a3dbff;
+  }
 }
 
 .dynamicopts {
@@ -570,4 +579,22 @@ div[data-handler=wallets] {
     background-color: #f3f3f3;
     box-shadow: 0 3px 6px #00000021, 0 2px 7px #00000041;
   }
+}
+
+.on-indicator {
+  width: 15px;
+  height: 15px;
+  border-radius: 8px;
+
+  &.on {
+    background-color: $buycolor_dark;
+  }
+
+  &.off {
+    background-color: #777;
+  }
+}
+
+.bodybg {
+  background-color: $light_body_bg;
 }
