--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -1,8 +1,8 @@
 {{define "mmsettings"}}
 {{template "top" .}}
-<div id="main" data-handler="mmsettings" class="mmsettings w-100 overflow-y-auto">
+<div id="main" data-handler="mmsettings" class="flex-grow-1 d-flex flex-column align-items-stretch">
   <div class="w-100 flex-center p-2 fs28 d-flex d-md-none brdrbottom">[[[Market Maker Settings]]]</div>
-  <div class="d-flex w-100 brdrbottom align-items-stretch">
+  <div class="d-flex brdrbottom align-items-stretch">
     <div id="backButton" class="fs18 p-2 hoverbg pointer flex-center brdrright">
       <span class="ico-wide-headed-left-arrow fs28"></span>
     </div>
@@ -18,10 +18,10 @@
       <span id="headerReconfig" class="p-2 fs16 ico-edit hoverbg pointer"></span>
     </div>
   </div>
-  <div id="noMarket" class="fill-abs flex-center">
+  <div id="noMarket" class="flex-grow-1 flex-center">
     <button id="noMarketBttn" class="fs22 p-2 feature rounded3">[[[Select a Market]]]</button>
   </div>
-  <div id="botSettingsContainer" class="d-flex flex-wrap d-hide p-2">
+  <div id="botSettingsContainer" class="flex-grow-1 d-flex flex-wrap d-hide p-2">
     <div class="col-24 col-xl-8 col-xxl-6 px-3">
       {{- /* VIEW-ONLY MODE */ -}}
       <div id="viewOnly" class="w-100 d-flex flex-center pb-2 mb-2 fs18 brdrbottom">
@@ -419,18 +419,23 @@
   <div id="forms" class="d-hide">
     <form id="cexConfigForm" class="p-0 mw-425">
       <div class="form-closer"><span class="ico-cross"></span></div>
-      <div class="fs16 pb-3 px-3">
+      <div id="cexConfigPrompt" class="fs16 pb-3 px-3">
         [[[configure_cex_prompt]]]
       </div>
-      <div class="flex-center flex-column">
+      <div class="flex-center flex-column mb-3">
         <img id="cexConfigLogo" class="xclogo large">
         <div id="cexConfigName" class="mt-2 fs20"></div>
       </div>
-      <div class="d-flex flex-column mt-3 px-3">
+      <div id="cexConnectErrBox" class="fs16 mb-3 mx-3 p-3 flex-center flex-column brdr rounded3">
+        <span class="ico-disconnected fs24 errcolor"></span>
+        <span>There was an error encountered connecting with these credentials</span>
+        <span id="cexConnectErr" class="fs14 errcolor mt-2"></span>
+      </div>
+      <div class="d-flex flex-column mb-3 px-3">
         <label for="cexApiKeyInput">[[[API Key]]]</label>
         <input type="text" id="cexApiKeyInput" class="p-2 mt-1">
       </div>
-      <div class="d-flex flex-column mt-2 px-3 pb-3">
+      <div class="d-flex flex-column mb-2 px-3 pb-3">
         <label for="cexSecretInput">[[[API Secret]]]</label>
         <input type="text" id="cexSecretInput" class="p-2 mt-1">
       </div>
@@ -503,7 +508,14 @@
             <img data-tmpl="logo" class="mini-icon me-1 xclogo medium">
             <span data-tmpl="name" class="me-1 fs20 text-nowrap"></span>
           </div>
-          <span data-tmpl="needsconfig" class="fs14 grey flex-center"><span class="ico-settings fs12 me-1"></span> [[[Configure]]]</span>
+          <span data-tmpl="needsconfig" class="fs14 grey flex-center">
+            <span class="ico-settings fs12 me-1"></span>
+            <span>[[[Configure]]]</span>
+          </span>
+          <span data-tmpl="disconnected" class="flex-center">
+            <span class="ico-disconnected fs16 errcolor me-1"></span>
+            <span class="fs14 grey">Fix errors</span>
+          </span>
           <span data-tmpl="unavailable" class="fs14 grey">[[[Market not available]]]</span>
         </div>
       </div>
@@ -515,7 +527,7 @@
 
     <form id="marketSelectForm" class="p-0 pb-2">
       <div class="form-closer"><span class="ico-cross"></span></div>
-      <div class="flex-center fs22 mb-2">[[[Select a Market]]]</div>
+      <div class="flex-center fs24 mb-2">[[[Select a Market]]]</div>
 
       <div id="marketFilterBox" class="flex-center">
         <div class="position-relative">
