finish shielded-by-default and remove shieldedwallet

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -139,6 +139,7 @@
   [[[Receive]]]
   <img id="depositLogo" class="mini-icon mx-1">
   <span id="depositName"></span>
+</h3>
   <div class="flex-center pt-1 d-hide fs18 sans" id="depositTokenMsgBox">
     <span>[[[Token on]]]</span>
     <img id="depositTokenParentLogo" class="ms-1 micro-icon">
@@ -150,6 +151,9 @@
   <span id="depositAddress" class="user-select-all"></span>
   <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18 pointer"></span>
   <span id="copyAlert" class="d-hide">[[[copied]]]</span>
+</div>
+<div id="unifiedReceivers" class="d-flex align-items-stretch mb-3 mt-1">
+  <div id="unifiedReceiverTmpl" class="p-1 me-2 hoverbg lh1 fs15 pointer brdr selectable"></div>
 </div>
 <div class="d-flex">
   <button id="newDepAddrBttn" type="button" class="go justify-content-center">[[[New Address]]]</button>
