--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -563,7 +563,7 @@
     </form>
 
     {{- /* DEPOSIT ADDRESS */ -}}
-    <form class="position-relative flex-center flex-column fs20 d-hide" id="deposit">
+    <form class="mw-425 position-relative flex-center flex-column fs20 p-0 d-hide" id="deposit">
       {{template "depositAddress"}}
     </form>
 
