Fix poke template

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -68,12 +68,11 @@
     <div id="pokeList" class="d-hide flex-grow-1 stylish-overflow">
       <div id="pokeTmpl" class="note fs15 p-2">
         <div class="d-flex justify-content-center align-items-start px-1">
-          <div class="fs15 px-1 flex-grow-1" data-tmpl="details"></div>
+          <div class="fs15 px-1 flex-grow-1">
+            <span data-tmpl="subject"></span>
+            <span data-tmpl="details"></span>
+          </div>
           <span class="note-time"></span>
-        </div>
-        <div class="fs15 px-1">
-          <span data-tmpl="subject"></span>
-          <span data-tmpl="details"></span>
         </div>
       </div>
     </div>
