Mobile companion app and tor implementation

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -274,6 +274,7 @@ div[data-handler=register] {
 #exportSeedAuth,
 #cancelForm,
 #quickConfigForm,
+#companionAppForm,
 #toggleWalletStatusConfirm,
 #walletWait {
   width: 375px;
