--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -526,6 +526,28 @@
 <div class="fs15 p-3 text-center d-hide text-danger text-break" id="changePWErrMsg"></div>
 {{end}}
 
+{{define "companionAppForm"}}
+<div class="form-closer"><span class="ico-cross"></span></div>
+<div class="px-2 py-1 text-center position-relative fs22 sans-light mb-3">
+  [[[Companion App]]]
+</div>
+<p>[[[companion_app_info]]]</p>
+<div class="row">
+  <div class="col-14">
+    <div id="companionAppTorEnabled" class="d-hide">
+      <img class="mb-3" id="companionAppQrcode" />
+    </div>    
+    <div id="companionAppTorDisabled">
+      <p>[[[companion_app_tor_needed]]]</p>
+    </div>
+  </div>
+  <div class="col-10">
+    <button id="companionAppDownload" type="button" class="go mb-3 w-100" disabled>[[[Download APK]]]</button>
+    <img src="/img/get-it-on-fdroid.png" class="w-100">
+  </div>
+</div>
+{{end}}
+
 {{define "cancelOrderForm"}}
 <div class="form-closer"><span class="ico-cross"></span></div>
 <header>
