--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -79,6 +79,9 @@
       <div id="gameCodeLink" class="py-3 mb-3 border-bottom pointer hoverbg">
         <span class="ico-ticket"></span> [[[Redeem game code]]]
       </div>
+      <div class="mb-3 pb-3 border-bottom {{if not $authed}}d-hide{{end}}">
+        <button id="companionAppBtn" class="fs15">[[[Pair companion app]]]</button>
+      </div>
       <p class="grey">[[[Build ID]]]: <span id="commitHash" class="mono"></span></p>
     </div>
   </section>
@@ -113,6 +116,11 @@
     {{- /* CHANGE APP PASSWORD */ -}}
     <form class="d-hide" id="changeAppPWForm">
       {{template "changeAppPWForm"}}
+    </form>
+
+    {{- /* COMPANION APP PAIRING */ -}}
+    <form class="d-hide" id="companionAppForm">
+      {{template "companionAppForm"}}
     </form>
 
     {{- /* RESET APP PASSWORD */ -}}
