Fixed missed localized strings (#2684)

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -292,7 +292,7 @@
                     <tr id="txHistoryRowTmpl" class="hoverbg pointer">
                       <td>
                         <span data-tmpl="time"></span>
-                        <div data-tmpl="pending" class="d-hide"><span>Pending</span><div class="px-2 ico-spinner spinner fs-14 d-inline-block"></div></div>
+                        <div data-tmpl="pending" class="d-hide"><span>[[[Pending]]]</span><div class="px-2 ico-spinner spinner fs-14 d-inline-block"></div></div>
                       </td>
                       <td>
                         <span data-tmpl="type"></span>
@@ -311,7 +311,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <span id="earlierTxs">Load earlier transactions...</span>
+                <span id="earlierTxs">[[[load_earlier_transactions]]]</span>
               </div>
               <div class="m-auto flex-center flex-column w-100 py-3 d-hide" id="noTxHistory">
                 [[[no_tx_history]]]
