check for used addresses

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -138,6 +138,12 @@
 <div id="newDepAddrBttnBox" class="flex-stretch-column">
   <button id="newDepAddrBttn" type="button" class="feature">[[[New Address]]]</button>
 </div>
+<div id="addrUsed" class="mt-3 fs15 grey">
+  [[[address has been used]]]
+</div>
+<div class="my-3">
+  <button id="newDepAddrBttn" type="button" class=" px-2 justify-content-center fs15 bg2 selected">[[[New Deposit Address]]]</button>
+</div>
 <div class="fs15 text-center d-hide text-danger text-break" id="depositErr"></div>
 {{end}}
 
